Fixed hints getting cut off. HFJ-1619

--- a/css/blanks.css
+++ b/css/blanks.css
@@ -1,6 +1,5 @@
 .h5p-blanks {
   position: relative;
-  overflow: hidden;
 }
 .h5p-blanks .h5p-input-wrapper {
   display: inline-block;
